+ Mejora rutas de archivos + Mejora visualizacion de imagenes en comentarios

--- a/photologue_groups/templates/photologue_groups/publications_entries.html
+++ b/photologue_groups/templates/photologue_groups/publications_entries.html
@@ -55,7 +55,7 @@
                         <div class="row images">
                             {% for image in images %}
                             <div class="col l9 s12 z-depth-2 center">
-                                <img class="responsive-img lazyload" data-src="{{image.image.url}}" alt="Imagen de: {{ node.author }}" title="Imagen de: {{ node.author }}">
+                                <img class="responsive-img materialboxed lazyload" data-src="{{image.image.url}}" alt="Imagen de: {{ node.author }}" title="Imagen de: {{ node.author }}">
                             </div>
                             {% endfor %}
                         </div>
