--- a/skyfolk/templates/account/base_news.html
+++ b/skyfolk/templates/account/base_news.html
@@ -108,7 +108,7 @@
                                     <div class="row">
                                         {% for image in images %}
                                         <div class="col s12">
-                                            <img class="lazyload responsive-img z-depth-2" data-src="{{image.image.url}}" alt="Imagen de: {{ item.author }}" title="Imagen de: {{ item.author }}">
+                                            <img class="lazyload materialboxed responsive-img z-depth-2" data-src="{{image.image.url}}" alt="Imagen de: {{ item.author }}" title="Imagen de: {{ item.author }}">
                                         </div>
                                         {% endfor %}
                                     </div>
@@ -179,7 +179,7 @@
                                             <div class="row">
                                                 {% for image in images %}
                                                 <div class="col s4">
-                                                    <img class="lazyload responsive-img z-depth-2" data-src="{{image.image.url}}" alt="Imagen de: {{ item.author }}" title="Imagen de: {{ item.author }}">
+                                                    <img class="lazyload materialboxed responsive-img z-depth-2" data-src="{{image.image.url}}" alt="Imagen de: {{ item.author }}" title="Imagen de: {{ item.author }}">
                                                 </div>
                                                 {% endfor %}
                                             </div>
