--- a/skyfolk/templates/account/profile_comments.html
+++ b/skyfolk/templates/account/profile_comments.html
@@ -70,12 +70,10 @@
                                                                 <div class="row">
                                                                     {% for image in images %}
                                                                         <div class="col l4 s12">
-                                                                            <a href="{{ image.image.url }}">
-                                                                            <img class="lazyload responsive-img z-depth-2"
+                                                                            <img class="lazyload materialboxed responsive-img z-depth-2"
                                                                                  data-src="{{ image.image.url }}"
                                                                                  alt="Imagen de: {{ node.author }}"
                                                                                  title="Imagen de: {{ node.author }}">
-                                                                             </a>
                                                                         </div>
                                                                     {% endfor %}
                                                                 </div>
@@ -150,12 +148,10 @@
                                                                 <div class="row">
                                                                     {% for image in images %}
                                                                         <div class="col l4 s12">
-                                                                            <a href="{{ image.image.url }}">
-                                                                            <img class="lazyload responsive-img z-depth-2"
+                                                                            <img class="lazyload materialboxed responsive-img z-depth-2"
                                                                                  data-src="{{ image.image.url }}"
                                                                                  alt="Imagen de: {{ node.author }}"
                                                                                  title="Imagen de: {{ node.author }}">
-                                                                             </a>
                                                                         </div>
                                                                     {% endfor %}
                                                                 </div>
@@ -211,12 +207,10 @@
                                                 <div class="row images">
                                                     {% for image in images %}
                                                         <div class="col l4 s12 z-depth-2 center">
-                                                            <a href="{{ image.image.url }}">
-                                                            <img class="lazyload responsive-img"
+                                                            <img class="lazyload materialboxed responsive-img"
                                                                  data-src="{{ image.image.url }}"
                                                                  alt="Imagen de: {{ node.author }}"
                                                                  title="Imagen de: {{ node.author }}">
-                                                             </a>
                                                         </div>
                                                     {% endfor %}
                                                 </div>
