--- a/skyfolk/templates/channels/new_group_publication.html
+++ b/skyfolk/templates/channels/new_group_publication.html
@@ -50,7 +50,7 @@
                                         <div class="row images">
                                             {% for image in images %}
                                                 <div class="col s4 z-depth-2 center">
-                                                    <img class="lazyload responsive-img"
+                                                    <img class="lazyload materialboxed responsive-img"
                                                          data-src="{{ image.image.url }}"
                                                          alt="Imagen de: {{ node.author }}"
                                                          title="Imagen de: {{ node.author }}">
@@ -176,3 +176,8 @@
         </div>
     </div>
 </div>
+<script>
+    $(document).ready(function () {
+        $('.materialboxed').materialbox();
+    });
+</script>
