--- a/skyfolk/templates/groups/ajax_load_group_replies.html
+++ b/skyfolk/templates/groups/ajax_load_group_replies.html
@@ -204,3 +204,8 @@
             </div>
         </div>
     {% endfor %}
+<script>
+    $(document).ready(function () {
+        $('.materialboxed').materialbox();
+    });
+</script>
