--- a/photologue/templates/photologue/ajax_load_replies.html
+++ b/photologue/templates/photologue/ajax_load_replies.html
@@ -186,3 +186,8 @@
 </div>
 </div>
 {% endfor %}
+<script>
+    $(document).ready(function () {
+        $('.materialboxed').materialbox();
+    });
+</script>
