--- a/photologue/templates/photologue/videos/ajax_load_replies.html
+++ b/photologue/templates/photologue/videos/ajax_load_replies.html
@@ -58,7 +58,7 @@
                         <div class="row images">
                             {% for image in images %}
                             <div class="col s4 z-depth-2 center">
-                                <img class="responsive-img lazyload" data-src="{{image.image.url}}" alt="Imagen de: {{ node.author }}" title="Imagen de: {{ node.author }}">
+                                <img class="responsive-img materialboxed lazyload" data-src="{{image.image.url}}" alt="Imagen de: {{ node.author }}" title="Imagen de: {{ node.author }}">
                             </div>
                             {% endfor %}
                         </div>
