--- a/skyfolk/templates/channels/new_photo_group_publication_detail.html
+++ b/skyfolk/templates/channels/new_photo_group_publication_detail.html
@@ -48,7 +48,7 @@
                             <div class="row">
                                 {% for image in images %}
                                 <div class="col s4 z-depth-2">
-                                    <img class="responsive-img lazyload" data-src="{{image.image.url}}" alt="Imagen de: {{ node.author }}" title="Imagen de: {{ node.author }}">
+                                    <img class="responsive-img materialboxed lazyload" data-src="{{image.image.url}}" alt="Imagen de: {{ node.author }}" title="Imagen de: {{ node.author }}">
                                 </div>
                                 {% endfor %}
                             </div>
@@ -154,3 +154,8 @@
 </div>
 
 </div>
+<script>
+    $(document).ready(function () {
+        $('.materialboxed').materialbox();
+    });
+</script>
