--- a/skyfolk/templates/channels/new_video_publication.html
+++ b/skyfolk/templates/channels/new_video_publication.html
@@ -175,3 +175,8 @@
 </div>
 </div>
 </div>
+<script>
+    $(document).ready(function () {
+        $('.materialboxed').materialbox();
+    });
+</script>
