--- a/skyfolk/templates/channels/new_video_publication_detail.html
+++ b/skyfolk/templates/channels/new_video_publication_detail.html
@@ -51,7 +51,7 @@
                                 <div class="row">
                                     {% for image in images %}
                                         <div class="col s4 z-depth-2">
-                                            <img class="responsive-img lazyload" data-src="{{ image.image.url }}"
+                                            <img class="responsive-img lazyload materialboxed" data-src="{{ image.image.url }}"
                                                  alt="Imagen de: {{ node.author }}"
                                                  title="Imagen de: {{ node.author }}">
                                         </div>
@@ -162,3 +162,8 @@
     </div>
 
 </div>
+<script>
+    $(document).ready(function () {
+        $('.materialboxed').materialbox();
+    });
+</script>
