--- a/skyfolk/templates/groups/board_theme_publications.html
+++ b/skyfolk/templates/groups/board_theme_publications.html
@@ -46,7 +46,7 @@
                                             <div class="row">
                                                 {% for image in images %}
                                                     <div class="col s4 z-depth-2">
-                                                        <img class="responsive-img lazyload"
+                                                        <img class="responsive-img materialboxed lazyload"
                                                              data-src="{{ image.image.url }}"
                                                              alt="Imagen de: {{ pub.author }}"
                                                              title="Imagen de: {{ pub.author }}">
