--- a/skyfolk/templates/groups/publication_detail.html
+++ b/skyfolk/templates/groups/publication_detail.html
@@ -111,7 +111,7 @@
                                                 <div class="row">
                                                     {% for image in images %}
                                                         <div class="col s4 z-depth-2">
-                                                            <img class="responsive-img lazyload"
+                                                            <img class="responsive-img materialboxed lazyload"
                                                                  data-src="{{ image.image.url }}"
                                                                  alt="Imagen de: {{ node.author }}"
                                                                  title="Imagen de: {{ node.author }}">
