--- a/skyfolk/templates/search/search.html
+++ b/skyfolk/templates/search/search.html
@@ -160,7 +160,7 @@ Template para las busquedas
                                         <br>
                                         {% for i in item.object.images.all %}
                                             <div class="col s12">
-                                                <img src="{{ i.image.url }}" alt="{{ item.author }}" width="100%"
+                                                <img class="materialboxed" src="{{ i.image.url }}" alt="{{ item.author }}" width="100%"
                                                      height="100%"/>
                                             </div>
                                         {% endfor %}
@@ -325,7 +325,7 @@ Template para las busquedas
                                     <br>
                                     {% for i in item.object.images.all %}
                                         <div class="col s12">
-                                            <img src="{{ i.image.url }}" alt="{{ item.author }}" width="100%"
+                                            <img class="materialboxed" src="{{ i.image.url }}" alt="{{ item.author }}" width="100%"
                                                  height="100%"/>
                                         </div>
                                     {% endfor %}
