--- a/skyfolk/templates/account/profile.html
+++ b/skyfolk/templates/account/profile.html
@@ -16,6 +16,7 @@ Template para el perfil de cada usuario
     {% compress css %}
         <link rel="stylesheet" type="text/css" href="{% static "css/comentarios.css" %}">
         <link rel="stylesheet" type="text/css" href="{% static "css/profile.css" %}">
+        <link href="{% static 'colorbox/colorbox.css' %}" rel="stylesheet" type="text/css">
         <style>
             .card-content img {
                 max-width: 100%;
@@ -38,6 +39,8 @@ Template para el perfil de cada usuario
         <script src="{% static "js/profile.js" %}" type="text/javascript"></script>
         <script src="{% static "js/jquery.easytabs.js" %}" type="text/javascript"></script>
         <script src="{% static "js/jquery.hashchange.min.js" %}" type="text/javascript"></script>
+        <script src="{% static 'colorbox/jquery.colorbox-min.js' %}"></script>
+        <script src="{% static "js/dash.js" %}" type="text/javascript"></script>
         {% for script in js %}
             <script src="{% static script %}" type="text/javascript"></script>
         {% endfor %}
