--- a/photologue_groups/templates/photologue_groups/videos/ajax_load_replies.html
+++ b/photologue_groups/templates/photologue_groups/videos/ajax_load_replies.html
@@ -70,7 +70,7 @@
                            {% for video in videos %}
                            <div class="col s4 z-depth-2 center">
                             <video class="responsive-video" controls loop>
-                                <source src="{{ video.video.url }}" type="video/mp4">
+                                <source src="{{ object.video.url }}" type="video/mp4">
                                 </video>
                             </div>
                             {% endfor %}
