--- a/skyfolk/templates/account/ajax_load_replies.html
+++ b/skyfolk/templates/account/ajax_load_replies.html
@@ -223,7 +223,7 @@
                          class="author-controls">
                         <div class="row">
                             <div class="col s12">
-                                <form method="post" accept-charset="utf-8">{% csrf_token %}
+                                <form method="post" accept-charset="utf-8">
                                     <div class="row">
                                         <div class="input-field col s12">
                                             <input type="number" name="pk" required value="{{ node.pk }}"
