--- a/photologue/templates/photologue/videos/publication_detail.html
+++ b/photologue/templates/photologue/videos/publication_detail.html
@@ -126,7 +126,6 @@
                                 <div class="divider"></div>
                                 <div class="options_comentarios col s12">
                                     <ul class="opciones">
-                                    {{ object }}
                                         {% if user.id == object.owner_id or user.id == node.author.id %}
                                             <li class="trash-comment" title="Borrar comentario"><i
                                                     class="material-icons">delete_forever</i>
@@ -151,7 +150,7 @@
                                  class="p_author-controls">
                                 <div class="row">
                                     <div class="col s12">
-                                        <form method="post" accept-charset="utf-8">{% csrf_token %}
+                                        <form method="post" accept-charset="utf-8">
                                             <div class="row">
                                                 <div class="input-field col s12">
                                                     <input type="number" name="pk" required value="{{ node.pk }}" hidden>
