--- a/skyfolk/templates/account/publication_detail.html
+++ b/skyfolk/templates/account/publication_detail.html
@@ -35,7 +35,7 @@
                         <h6>Comparte esta publicación con tus seguidores</h6>
                     </div>
                 </div>
-                <form id="share_publication_form" action="" method="post">{% csrf_token %}
+                <form id="share_publication_form" action="" method="post">
                     {{ publication_shared.pk }}
                     <div class="row">
                         <div class="row">
@@ -319,7 +319,7 @@
                                  class="author-controls">
                                 <div class="row">
                                     <div class="col s12">
-                                        <form method="post" accept-charset="utf-8">{% csrf_token %}
+                                        <form method="post" accept-charset="utf-8">
                                             <div class="row">
                                                 <div class="input-field col s12">
                                                     <input type="number" name="pk" required value="{{ node.pk }}"
