--- a/skyfolk/templates/channels/new_group_publication.html
+++ b/skyfolk/templates/channels/new_group_publication.html
@@ -145,7 +145,7 @@
                              class="author-controls">
                             <div class="row">
                                 <div class="col s12">
-                                    <form method="post" accept-charset="utf-8">{% csrf_token %}
+                                    <form method="post" accept-charset="utf-8">
                                         <div class="row">
                                             <div class="input-field col s12">
                                                 <input type="number" name="pk" required value="{{ node.pk }}" hidden>
