--- a/skyfolk/templates/channels/new_photo_group_publication_detail.html
+++ b/skyfolk/templates/channels/new_photo_group_publication_detail.html
@@ -1,4 +1,4 @@
-{% load decorators %}
+rf{% load decorators %}
 {% load avatar_tags %}
 {% load app_filters %}
 {% load humanize %}
@@ -123,7 +123,7 @@
                                  class="p_author-controls">
                                 <div class="row">
                                     <div class="col s12">
-                                        <form method="post" accept-charset="utf-8">{% csrf_token %}
+                                        <form method="post" accept-charset="utf-8">
                                             <div class="row">
                                                 <div class="input-field col s12">
                                                     <input type="number" name="pk" required value="{{ node.pk }}" hidden>
