--- a/skyfolk/templates/groups/new_reply_theme.html
+++ b/skyfolk/templates/groups/new_reply_theme.html
@@ -2,8 +2,7 @@
 Nueva respuesta a una publicacion
 {% endcomment %}
 <div class="hidden" id="caja-theme-{{ object.pk }}" style="display: none;">
-    <form class="reply-form" method="post" enctype="multipart/form-data">{% csrf_token %}
-        <input name="author" type="hidden" value="{{ request.user.id }}">
+    <form class="reply-form" method="post" enctype="multipart/form-data">
         <input name="board_theme" type="hidden" value="{{ object.id }}">
         <div class="row">
             <div class="col s12">
