--- a/skyfolk/templates/account/base_login-signup.html
+++ b/skyfolk/templates/account/base_login-signup.html
@@ -9,7 +9,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
-    <title>¡Bienvenido a Skyfolk! - Iniciar sesión (pre)</title>
+    <title>¡Bienvenido a Skyfolk! - Iniciar sesión</title>
     <meta name="keywords" content="skyfolk, social, login, registro, sky, folk, red social, red">
     <link rel="shortcut icon" href="{% static "img/favicon.ico" %}">
     {% compress css %}
@@ -82,36 +82,46 @@
                     <a>© 2018 Skyfolk</a>
                 </div>
             </li>
+            {% comment %}
             <li>
                 <div class="chip">
                     <a class="blue-text text-darken-1" href="/about/home">Sobre Skyfolk</a>
                 </div>
             </li>
+            {% endcomment %}
             <li>
                 <div class="chip">
                     <a class="blue-text text-darken-1" href="/blog">Blog</a>
                 </div>
             </li>
+            {% comment %}
             <li>
                 <div class="chip">
                     <a class="blue-text text-darken-1" href="/blog">Ayuda</a>
                 </div>
             </li>
+            {% endcomment %}
+            {% comment %}
             <li>
                 <div class="chip">
                     <a class="blue-text text-darken-1" href="/blog">Trabaja con nosotros</a>
                 </div>
             </li>
+            {% endcomment %}
+            {% comment %}
             <li>
                 <div class="chip">
                     <a class="blue-text text-darken-1" href="/blog">Publicidad</a>
                 </div>
             </li>
+            {% endcomment %}
+            {% comment %}
             <li>
                 <div class="chip">
                     <a class="blue-text text-darken-1" href="/blog">Privacidad</a>
                 </div>
             </li>
+            {% endcomment %}
         </ul>
     </div>
 </footer>
