--- a/skyfolk/templates/account/base.html
+++ b/skyfolk/templates/account/base.html
@@ -4,7 +4,7 @@
 <html>
 <!-- codigo del modulo allauth -->
 <head>
-    <title>{% block head_title %}{% endblock %}</title>
+    <title>Skyfolk // {% block head_title %}{% endblock %}</title>
     {% block extra_head %}
     {% endblock %}
     <link rel="stylesheet" type="text/css" href="{% static "css/setup.css" %}">
