+ Registro step by step listo

--- a/skyfolk/static/sass/login-signup.sass
+++ b/skyfolk/static/sass/login-signup.sass
@@ -70,10 +70,9 @@ main
 /* LOGO */
 .namesn
   position: relative
+  left: -50px
   display: block
-  width: 200px
-  height: 120px
-  margin: auto auto 10px
+  margin: auto auto 5%
   & i
     color: $blueskyfolk
     text-shadow: 1px 1px 1px #ccc
@@ -92,10 +91,6 @@ main
 .logo
   position: relative
   margin: auto
-  left: -120px
-  top: 110px
-  width: 150px
-  height: 100px
   cursor: pointer
   & img
     width: 100px
@@ -146,13 +141,11 @@ div#login h5
 .block-formregister
   background-color: #fff
   position: relative
-  float: right
-  margin-right: 130px
+  margin: auto
   font-family: 'Open Sans', sans-serif
   border-radius: 7px
   box-shadow: 0 1px 5px rgba(0, 0, 0, 0.15)
   padding: 0 0 30px
-  margin-bottom: 5%
   max-width: 370px
 
   & .reco-passwd
