--- a/skyfolk/templates/account/profile.html
+++ b/skyfolk/templates/account/profile.html
@@ -7,6 +7,7 @@ Template para el perfil de cada usuario
 {% load compress %}
 {% load static %}
 {% load dash_tags %}
+{% load user_guide_tags %}
 {% load render_bundle from webpack_loader %}
 {% block title %} <title> Perfil de {{ user_profile.username }}</title> {% endblock %}
 {% block include_files %}
@@ -47,7 +48,9 @@ Template para el perfil de cada usuario
     {% endcompress %}
     <div class="container">
         {% if user_profile.is_active %}
+        {% user_guide %}
             {% comment %}
+        }
     Formulario para citar un comentario
     {% endcomment %}
             <div class="row">
