+ STATIC_URL FIXEDS

--- a/avatar/templates/avatar/base.html
+++ b/avatar/templates/avatar/base.html
@@ -1,8 +1,9 @@
+{% load static %}
 <html>
 <head>
     <title>{% block title %}Configuración - Imágen de perfil.{% endblock %}</title>
 
-    <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}css/profile.css"/>
+    <link rel="stylesheet" type="text/css" href="{% static "css/profile.css" %}"/>
 </head>
 <body>
 {% block content %}{% endblock %}
