--- a/user_profile/templates/user_profile/user_content.html
+++ b/user_profile/templates/user_profile/user_content.html
@@ -130,7 +130,7 @@
             <div class="indeterminate blue darken-1"></div>
         </div>
     </div>
-    <script src="{{ STATIC_URL }}js/imagesloaded.pkgd.min.js"></script>
+    <script src="{% static "js/imagesloaded.pkgd.min.js" %}"></script>
     <script>
         var infinite = new Waypoint.Infinite({
             element: $('.grid'),
