--- a/avatar/templates/avatar/confirm_delete.html
+++ b/avatar/templates/avatar/confirm_delete.html
@@ -1,10 +1,11 @@
 {% extends "account/base_cf.html" %}
 {% load i18n %}
+{% load static %}
 
 {% block title %} <title>Configuración - {{ request.user.username }} - Imágenes de perfil.</title> {% endblock %}
 
 {% block extra-css %}
-    <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}css/avatar.css"/>
+    <link rel="stylesheet" type="text/css" href="{% static "css/avatar.css" %}"/>
 {% endblock %}
 
 {% block extra-js %}
