--- a/photologue/templates/photologue/photo_gallery.html
+++ b/photologue/templates/photologue/photo_gallery.html
@@ -2,12 +2,13 @@
 {% load avatar_tags %}
 {% load i18n %}
 {% load humanize %}
+{% load static %}
 {% block title %} <title>Skyfolk / Media </title> {% endblock %}
 
 {% block include_files %}
-    <link rel="stylesheet" href="{{ STATIC_URL }}css/gallery.css">
-    <link rel="stylesheet" href="{{ STATIC_URL }}css/main.css">
-    <link rel="stylesheet" href="{{ STATIC_URL }}css/cropper.min.css">
+    <link rel="stylesheet" href="{% static "css/gallery.css" %}">
+    <link rel="stylesheet" href="{% static "css/main.css" %}">
+    <link rel="stylesheet" href="{% static "css/cropper.min.css" %}">
 {% endblock %}
 
 {% block content %}
@@ -278,10 +279,10 @@
     </div> <!-- end wrapper -->
     {% block js-gallery %}
         {{ block.super }}
-        <script src="{{ STATIC_URL }}js/photo_gallery.js" type="text/javascript"></script>
-        <script type="text/javascript" src="{{ STATIC_URL }}js/cropper.min.js"></script>
-        <script type="text/javascript" src="{{ STATIC_URL }}js/main.js"></script>
-        <script src="{{ STATIC_URL }}el-pagination/js/el-pagination.js"></script>
+        <script src="{% static "js/photo_gallery.js" %}" type="text/javascript"></script>
+        <script type="text/javascript" src="{% static "js/cropper.min.js" %}"></script>
+        <script type="text/javascript" src="{% static "js/main.js" %}"></script>
+        <script src="{% static "el-pagination/js/el-pagination.js" %}"></script>
         <script>
             $.endlessPaginate({
                 paginateOnScroll: true,
