--- a/photologue_groups/templates/photologue_groups/photo_gallery.html
+++ b/photologue_groups/templates/photologue_groups/photo_gallery.html
@@ -6,9 +6,9 @@
 {% block title %} <title>Skyfolk / Media de {{ group_gallery.name }} </title> {% endblock %}
 
 {% block include_files %}
-    <link rel="stylesheet" href="{{ STATIC_URL }}css/gallery.css">
-    <link rel="stylesheet" href="{{ STATIC_URL }}css/main.css">
-    <link rel="stylesheet" href="{{ STATIC_URL }}css/cropper.min.css">
+    <link rel="stylesheet" href="{% static "css/gallery.css" %}">
+    <link rel="stylesheet" href="{% static "css/main.css" %}">
+    <link rel="stylesheet" href="{% static "css/cropper.min.css" %}">
 {% endblock %}
 
 {% block content %}
