--- a/photologue_groups/templates/photologue_groups/videos/ajax_load_replies.html
+++ b/photologue_groups/templates/photologue_groups/videos/ajax_load_replies.html
@@ -5,6 +5,7 @@
 {% load mptt_tags %}
 {% load embed_video_tags %}
 {% load group_utils %}
+{% load static %}
 <input type="hidden" value="{{ publications|length }}" class="childs_for_{{ pub_id }}">
 {% if publications.has_next %}
     <input type="hidden" value="{{ publications.next_page_number }}" class="page_for_{{ pub_id }}">
@@ -86,7 +87,8 @@
                         {% comment %} Para publicaciones con URL {% endcomment %}
                         <div class="card small">
                             <div class="card-image">
-                                <img class="lazyload" data-src="{% if node.publication_group_multimedia_video_extra_content.image %}{{ node.publication_group_multimedia_video_extra_content.image }}{% else %}{{ STATIC_URL }}dist/img/nuevo_back.png{% endif %}">
+                                <img class="lazyload" data-src="{% if node.publication_group_multimedia_video_extra_content.image %}{{ node.publication_group_multimedia_video_extra_content.image }}{% else %}{% static "                                <img class="lazyload" data-src="{% if node.publication_group_multimedia_video_extra_content.image %}{{ node.publication_group_multimedia_video_extra_content.image }}{% else %}{{ STATIC_URL }}{% endif %}">
+" %}{% endif %}">
                                 <span class="card-title white-text">{{ node.publication_group_multimedia_video_extra_content.title }}</span>
                             </div>
                             <div class="card-content">
