--- a/photologue_groups/templates/photologue_groups/videos/publication_detail.html
+++ b/photologue_groups/templates/photologue_groups/videos/publication_detail.html
@@ -7,11 +7,12 @@
 {% load embed_video_tags %}
 {% load compress %}
 {% load group_utils %}
+{% load static %}
 {% block extra-css %}
 
     {% compress css%}
-        <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}css/comentarios.css">
-        <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}css/publication_detail.css">
+        <link rel="stylesheet" type="text/css" href="{% static "css/comentarios.css" %}">
+        <link rel="stylesheet" type="text/css" href="{% static "css/publication_detail.css" %}">
     {% endcompress %}
 {% endblock %}
 
@@ -142,7 +143,7 @@
                                         <div class="card small">
                                             <div class="card-image">
                                                 <img class="lazyload" data-src="
-                                                        {% if node.publication_group_multimedia_video_extra_content.image %}{{ node.publication_group_multimedia_video_extra_content.image }}{% else %}{{ STATIC_URL }}dist/img/nuevo_back.png{% endif %}">
+                                                        {% if node.publication_group_multimedia_video_extra_content.image %}{{ node.publication_group_multimedia_video_extra_content.image }}{% else %}{% static "dist/img/nuevo_back.png" %}{% endif %}">
                                                 <span class="card-title white-text">{{ node.publication_group_multimedia_video_extra_content.title }}</span>
                                             </div>
                                             <div class="card-content">
@@ -223,8 +224,8 @@
             <div class="indeterminate blue darken-1"></div>
         </div>
     </div>
-    <script src="{{ STATIC_URL }}js/video_group_detail.js" type="text/javascript"></script>
-     <script src="{{ STATIC_URL }}js/socket_photo_publication.js"></script>
+    <script src="{% static "js/video_group_detail.js" %}" type="text/javascript"></script>
+     <script src="{% static "js/socket_photo_publication.js" %}"></script>
     <script>
     UTILS.init([{{ user.pk }}]);
     UTILS.conn_socket();
