--- a/photologue_groups/templates/photologue_groups/videos/publications_entries.html
+++ b/photologue_groups/templates/photologue_groups/videos/publications_entries.html
@@ -5,6 +5,7 @@
 {% load mptt_tags %}
 {% load embed_video_tags %}
 {% load group_utils %}
+{% load static %}
 {% for node in publications %}
 <div class="row infinite-item">
     <div class="col s12">
@@ -83,7 +84,7 @@
                         {% comment %} Para publicaciones con URL {% endcomment %}
                         <div class="card small">
                             <div class="card-image">
-                                <img class="lazyload" data-src="{% if node.publication_group_multimedia_video_extra_content.image %}{{ node.publication_group_multimedia_video_extra_content.image }}{% else %}{{ STATIC_URL }}dist/img/nuevo_back.png{% endif %}">
+                                <img class="lazyload" data-src="{% if node.publication_group_multimedia_video_extra_content.image %}{{ node.publication_group_multimedia_video_extra_content.image }}{% else %}{% static "dist/img/nuevo_back.png" %}{% endif %}">
                                 <span class="card-title white-text">{{ node.publication_group_multimedia_video_extra_content.title }}</span>
                             </div>
                             <div class="card-content">
