--- a/postman/templates/postman/base_folder.html
+++ b/postman/templates/postman/base_folder.html
@@ -1,4 +1,5 @@
 {% extends "postman/base.html" %}
+{% load static %}
 {% load i18n postman_tags %}{% load pagination_tags %}{% load avatar_tags %}{% comment %}
 WARNING: 'pagination_tags' is a name from the django-pagination application.
 For convenience, the design of this template is done with the use of that application.
@@ -8,7 +9,7 @@ If the real implementation is to be used, just make sure that 'pagination' is de
 in the INSTALLED_APPS setting.
 {% endcomment %}
 {% block extra-css %}
-    <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}css/mensajes_privados.css"/>
+    <link rel="stylesheet" type="text/css" href="{% static "css/mensajes_privados.css" %}"/>
 {% endblock %}
 {% block content %}
     <div class="container">
