--- a/skyfolk/templates/account/base_news.html
+++ b/skyfolk/templates/account/base_news.html
@@ -207,7 +207,7 @@
                                                 {% else %}
                                                 <div class="card small">
                                                     <div class="card-image">
-                                                        <img class="lazyload" data-src="{% if item.shared_group_publication.extra_content.image %}{{ item.shared_group_publication.extra_content.image }}{% else %}{{ STATIC_URL }}dist/img/nuevo_back.png{% endif %}">
+                                                        <img class="lazyload" data-src="{% if item.shared_group_publication.extra_content.image %}{{ item.shared_group_publication.extra_content.image }}{% else %}{% static "dist/img/nuevo_back.png" %}{% endif %}">
                                                         <span class="card-title white-text">{{ item.shared_group_publication.extra_content.title }}</span>
                                                     </div>
                                                     <div class="card-content">
@@ -365,7 +365,7 @@
                             <div class="indeterminate blue darken-1"></div>
                         </div>
                     </div>
-                    <script src="{{ STATIC_URL }}js/socket_news.js" type="text/javascript"></script>
+                    <script src="{% static "js/socket_news.js" %}" type="text/javascript"></script>
                     <script>
                     var $grid = $('.grid').masonry({
                         itemSelector: '.grid-item',
