--- a/skyfolk/templates/channels/new_video_publication_detail.html
+++ b/skyfolk/templates/channels/new_video_publication_detail.html
@@ -82,7 +82,7 @@
                                         <div class="card small">
                                             <div class="card-image">
                                                 <img class="lazyload" data-src="
-                                                        {% if node.publication_video_extra_content.image %}{{ node.publication_video_extra_content.image }}{% else %}{{ STATIC_URL }}dist/img/nuevo_back.png{% endif %}">
+                                                        {% if node.publication_video_extra_content.image %}{{ node.publication_video_extra_content.image }}{% else %}{% static "dist/img/nuevo_back.png" %}{% endif %}">
                                                 <span class="card-title white-text">{{ node.publication_video_extra_content.title }}</span>
                                             </div>
                                             <div class="card-content">
