+ Adaptando galerias, imagenes y video a S3...

--- a/photologue/templates/photologue/publications_entries.html
+++ b/photologue/templates/photologue/publications_entries.html
@@ -5,6 +5,7 @@
 {% load mptt_tags %}
 {% load embed_video_tags %}
 {% load group_utils %}
+{% load static %}
 {% for node in publications %}
 <div class="row infinite-item">
     <div class="col s12">
